--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "@types/express": "^5.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
-  }
+  },
+  "scripts": {
+  "build": "npx prisma generate && npx prisma migrate deploy",
+  "start": "npx ts-node src/index.ts"
+}
+
 }
